{
    "version": 1,
    "name": "UserInput",
    "maps": [
        {
            "name": "Camera",
            "id": "00518a0b-d77f-466b-8700-c70019daf57f",
            "actions": [
                {
                    "name": "Pan",
                    "type": "Button",
                    "id": "28aa76e3-1226-4b05-9299-4cc7686ae7a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "f8637d4c-cb67-4684-846a-a9f633731832",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "2a6c502b-ea68-4fdf-a38a-b5140542783e",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "61dd2d61-8b3f-4747-a01a-b7077dfdb2ff",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "70a9a24b-d9d8-4b57-81e6-afa5365c4b99",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b784b055-16a1-47d9-b511-99991aa78581",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Editor",
            "id": "fa8155eb-3469-463c-b484-cb01220ffb8a",
            "actions": [
                {
                    "name": "PlaceObject",
                    "type": "Button",
                    "id": "c2d8c75d-fd81-4767-86e5-4d82d5ff4b32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c86d7b1c-99ee-4490-a30c-230c571d50d7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7059c304-d028-4746-91c5-84b5b236fb72",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "cabe8f1c-a3ee-4110-b5b6-2bee6c05601b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1103800-fa0b-4817-925d-3af93d97ce14",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "c52598f9-6930-43c7-92a3-a7a3bc781ad1",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "596023bd-728e-44b4-af83-9c6e094af26c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "d600c591-79d1-4aca-837e-a2c27005c83f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "4b31424a-6137-4f55-9ec4-71187b5b89db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fde4b4d0-a36d-4176-8397-1be67686df70",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e791a4ae-e8c6-4e71-84b8-12a333ba5f80",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a26c3ae-aa6c-4237-b428-36c74a4c871a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}